[package]
name = "linux-compat-server"
version = "0.1.0"
edition = "2021"
authors = ["RedoxOS Contributors"]
description = "Linux Application Compatibility (LAC) layer for running unmodified Linux binaries"

[[bin]]
name = "lacd"
path = "src/main.rs"

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2"
goblin = "0.8"  # ELF parsing

# Redox dependencies
common = { path = "../common" }
libredox = "0.1.3"
redox_syscall = "0.5"
redox-scheme = "0.6.2"
redox-daemon = "0.1"
redox_event = "0.4.1"

[dev-dependencies]

[features]
default = ["x86_64"]
x86_64 = []
aarch64 = []
