[package]
name = "nvme-driver"
version = "0.2.0"
edition = "2024"
authors = ["RedoxOS Contributors"]
description = "High-performance async multi-queue NVMe driver for Redox OS"

[features]
default = ["performance-counters", "multi-queue"]
performance-counters = []
multi-queue = []
zero-copy = []
nvme-mi = []    # NVMe Management Interface
io-uring-compat = []

[dependencies]
anyhow = "1.0"
redox_event = "0.4"
log = "0.4"
nvme = { path = "../nvme-core" }
redox-rt = { path = "../../relibc/redox-rt" }
redox-log = { version = "0.1", features = ["std"] }
libredox = "0.1.3"
spin = "0.9"
redox_syscall = "0.5"
num_cpus = "1.13"
parking_lot = "0.12"
crossbeam-queue = "0.3"
bitflags = "2"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
pcid = { path = "../pcid" }
