[package]
name = "windows-compat-server"
version = "0.1.0"
edition = "2024"
description = "Windows Application Compatibility (WAC) Server for Redox OS"
authors = ["Redox OS Developers"]
license = "MIT"

[dependencies]
redox_syscall = "0.4"
redox-scheme = "0.2"
redox_daemon = "0.1"
spin = "0.9"
bitflags = "2"

[features]
default = []
