[package]
name = "redoxml"
version = "0.1.0"
edition = "2021"
authors = ["Redox OS Contributors"]
description = "Native AI/ML computation API for Redox OS"

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2"
num-traits = "0.2"

# Redox dependencies
common = { path = "../../common" }
libredox = "0.1.3"
redox_syscall = "0.5"

[features]
default = ["cpu", "gpu", "npu"]
cpu = []
gpu = []
npu = []
tpu = []
avx512 = []
amx = []
neon = []
sve = []
