[package]
name = "gal-virtio"
version = "0.1.0"
edition = "2021"
authors = ["RedoxOS Contributors"]
description = "VirtIO-GPU backend for the Graphics Abstraction Layer"

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2"

# Redox dependencies
common = { path = "../../common" }
libredox = "0.1.3"
redox_syscall = "0.5"
virtio-core = { path = "../../virtio-core" }

# GAL interface
gal = { path = "../gal" }
