[package]
name = "gal"
version = "0.1.0"
edition = "2021"
authors = ["RedoxOS Contributors"]
description = "Graphics Abstraction Layer for hardware-accelerated rendering"

[features]
default = ["vulkan", "wgpu"]
vulkan = []
wgpu = []
virtio = []

[dependencies]
log = "0.4"
bitflags = "2"
spin = "0.9"

# Redox dependencies
common = { path = "../../common" }
libredox = "0.1.3"
redox_syscall = "0.5"

[dev-dependencies]
