[package]
name = "graphics-api"
version = "0.1.0"
edition = "2021"
authors = ["Redox OS Contributors"]
description = "Native graphics API layer with Ray Tracing and AI upscaling"

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2"
ash = "0.38"  # Vulkan bindings
spirv-reflect = "0.2"
shaderc = "0.8"  # Shader compilation

# Redox dependencies
common = { path = "../../common" }
libredox = "0.1.3"
redox_syscall = "0.5"

[features]
default = ["ray-tracing", "upscaling", "anti-lag"]
ray-tracing = []
upscaling = []
anti-lag = []
shader-cache = []
